grouped gender and emotions
for only one local file

--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -53,13 +53,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 659 ms\n"
+      "time: 254 ms\n"
      ]
     }
    ],
    "source": [
     "# setting up the file\n",
-    "videoFile = 'debate_sample.mp4'\n",
+    "videoFile = 'debate.mp4'\n",
     "vidcap = cv2.VideoCapture(videoFile)\n",
     "success,image = vidcap.read()\n",
     "\n",
@@ -71,22 +71,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 3.83 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# extarcting every frame\n",
     "count = 0;\n",
     "while success:\n",
     "  success,image = vidcap.read()\n",
     "  if count % multiplier == 0:\n",
-    "      cv2.imwrite(\"debate_frames/frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
+    "      cv2.imwrite(\"debate_frames/frame2%d.jpg\" % count, image)     # save frame as JPEG file\n",
     "  \n",
     "  if cv2.waitKey(10) == 27:                     # exit if Escape is hit\n",
     "      break\n",
     "  count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 8.53 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "#loading files to S3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import boto3 as boto\n",
+    "\n",
+    "s3 = boto.resource('s3')\n",
+    "bucket = s3.Bucket('debateinemotion/debate_frames')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for bucket in s3.buckets.all():\n",
+    "    print(bucket.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#s3.Bucket('debateinemotion/debate_frames').put_object(Key='test.jpg', Body=data)"
    ]
   },
   {
