every nth second video extraction

--- a/emotions.ipynb
+++ b/emotions.ipynb
@@ -33,7 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Image path\n",
+    "urlImage2 = 'https://s3-us-west-2.amazonaws.com/debateinemotion/debate_frames/frame1050.jpg'\n",
+    "image = '/Users/Amiros/GitHub/debate/sample groups/h9'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -123,19 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Image path\n",
-    "urlImage2 = 'https://raw.githubusercontent.com/Microsoft/ProjectOxford-ClientSDK/master/Face/Windows/Data/detection3.jpg'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -156,27 +157,31 @@
     {
      "data": {
       "text/plain": [
-       "[{'faceRectangle': {'height': 140, 'left': 216, 'top': 143, 'width': 140},\n",
-       "  'scores': {'anger': 4.857832e-09,\n",
-       "   'contempt': 3.60886387e-09,\n",
-       "   'disgust': 1.88275351e-09,\n",
-       "   'fear': 8.208998e-10,\n",
-       "   'happiness': 0.99999994,\n",
-       "   'neutral': 1.58002855e-08,\n",
-       "   'sadness': 2.58834572e-08,\n",
-       "   'surprise': 3.569176e-08}},\n",
-       " {'faceRectangle': {'height': 138, 'left': 378, 'top': 239, 'width': 138},\n",
-       "  'scores': {'anger': 4.67109421e-05,\n",
-       "   'contempt': 9.014235e-05,\n",
-       "   'disgust': 7.946587e-05,\n",
-       "   'fear': 0.0564681776,\n",
-       "   'happiness': 5.95064048e-05,\n",
-       "   'neutral': 0.5410432,\n",
-       "   'sadness': 0.299806863,\n",
-       "   'surprise': 0.102405921}}]"
+       "[{'faceAttributes': {'gender': 'male'},\n",
+       "  'faceId': 'a5d0a88a-34ed-4367-88a9-9be6a4d0db3f',\n",
+       "  'faceRectangle': {'height': 140, 'left': 231, 'top': 108, 'width': 140},\n",
+       "  'scores': {'anger': 0.004384325,\n",
+       "   'contempt': 0.0455157645,\n",
+       "   'disgust': 0.0111863315,\n",
+       "   'fear': 0.0006400645,\n",
+       "   'happiness': 0.01560514,\n",
+       "   'neutral': 0.34206596,\n",
+       "   'sadness': 0.579981,\n",
+       "   'surprise': 0.0006214003}},\n",
+       " {'faceAttributes': {'gender': 'female'},\n",
+       "  'faceId': '53ab45af-b792-45b6-8af2-4ef82c272b7b',\n",
+       "  'faceRectangle': {'height': 136, 'left': 628, 'top': 109, 'width': 136},\n",
+       "  'scores': {'anger': 0.0005654177,\n",
+       "   'contempt': 0.003809408,\n",
+       "   'disgust': 0.00125692727,\n",
+       "   'fear': 1.867909e-05,\n",
+       "   'happiness': 0.06654705,\n",
+       "   'neutral': 0.886985242,\n",
+       "   'sadness': 0.00117054419,\n",
+       "   'surprise': 0.0396467075}}]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +191,144 @@
     "final_data = []\n",
     "for i, value in enumerate(result):\n",
     "    final_data.append(result[i])\n",
-    "    final_data[i].update(face[i])"
+    "    final_data[i].update(face[i])\n",
+    "final_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Turning Json to pandas dataframe\n",
+    "\n",
+    "#function to flatten json objects\n",
+    "def flattenjson( b, delim ):\n",
+    "    val = {}\n",
+    "    for i in b.keys():\n",
+    "        if isinstance( b[i], dict ):\n",
+    "            get = flattenjson( b[i], delim )\n",
+    "            for j in get.keys():\n",
+    "                val[ i + delim + j ] = get[j]\n",
+    "        else:\n",
+    "            val[i] = b[i]\n",
+    "\n",
+    "    return val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#select keys that are needed for analysis - it can be modified as needed\n",
+    "wanted_keys = ['faceAttributes', 'faceId', 'scores']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(final_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "f = []\n",
+    "for index, entry in enumerate(final_data):\n",
+    "    flat_dict = flattenjson(final_data[index], \",\")\n",
+    "    trimmed_dict = dict((k, flat_dict[k]) for k in wanted_keys if k in flat_dict)\n",
+    "    f.append(trimmed_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>faceAttributes</th>\n",
+       "      <th>faceId</th>\n",
+       "      <th>faceRectangle</th>\n",
+       "      <th>scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'gender': 'male'}</td>\n",
+       "      <td>a5d0a88a-34ed-4367-88a9-9be6a4d0db3f</td>\n",
+       "      <td>{'left': 231, 'top': 108, 'height': 140, 'widt...</td>\n",
+       "      <td>{'sadness': 0.579981, 'surprise': 0.0006214003...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'gender': 'female'}</td>\n",
+       "      <td>53ab45af-b792-45b6-8af2-4ef82c272b7b</td>\n",
+       "      <td>{'left': 628, 'top': 109, 'height': 136, 'widt...</td>\n",
+       "      <td>{'sadness': 0.00117054419, 'surprise': 0.03964...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         faceAttributes                                faceId  \\\n",
+       "0    {'gender': 'male'}  a5d0a88a-34ed-4367-88a9-9be6a4d0db3f   \n",
+       "1  {'gender': 'female'}  53ab45af-b792-45b6-8af2-4ef82c272b7b   \n",
+       "\n",
+       "                                       faceRectangle  \\\n",
+       "0  {'left': 231, 'top': 108, 'height': 140, 'widt...   \n",
+       "1  {'left': 628, 'top': 109, 'height': 136, 'widt...   \n",
+       "\n",
+       "                                              scores  \n",
+       "0  {'sadness': 0.579981, 'surprise': 0.0006214003...  \n",
+       "1  {'sadness': 0.00117054419, 'surprise': 0.03964...  "
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(final_data)"
    ]
   },
   {
@@ -196,9 +338,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#Turning Json to pandas dataframe"
-   ]
+   "source": []
   }
  ],
  "metadata": {
