--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 254 ms\n"
+      "time: 168 ms\n"
      ]
     }
    ],
@@ -64,26 +64,46 @@
     "success,image = vidcap.read()\n",
     "\n",
     "# setting up parameters\n",
-    "seconds = 5\n",
+    "seconds = 5000\n",
     "fps = int(round(vidcap.get(cv2.CAP_PROP_FPS))) # Gets the frames per second\n",
-    "multiplier = fps * seconds"
+    "total_frames = int(vidcap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "duration = (round(total_frames/fps) -1)*1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 3.83 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "                   # Retrieves the frame at the specified second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#extracting every 'second' of the video\n",
+    "for i in range(0, duration, seconds):\n",
+    "    vidcap.set(cv2.CAP_PROP_POS_MSEC,i)\n",
+    "    success,image = vidcap.read()\n",
+    "    j = i/1000\n",
+    "    cv2.imwrite(\"debate_frames/frame%d.jpg\" % j, image)     # save frame as JPEG file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# extarcting every frame\n",
     "count = 0;\n",
@@ -99,19 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 8.53 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#loading files to S3"
    ]
@@ -125,42 +137,24 @@
    "outputs": [],
    "source": [
     "import boto3 as boto\n",
+    "s3 = boto.resource('s3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#setting parameters\n",
+    "AWS_APP_ID = 'AKIAIEZRTCL3W6AOZYMQ'\n",
+    "AWS_APP_SECRET = '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'\n",
+    "AWS_BUCKET = 'debateinemotion/debate1'\n",
     "\n",
-    "s3 = boto.resource('s3')\n",
-    "bucket = s3.Bucket('debateinemotion/debate_frames')"
+    "file = '/Users/Amiros/GitHub/debate/sampledebate_frames/frame150.jpg'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for bucket in s3.buckets.all():\n",
-    "    print(bucket.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#s3.Bucket('debateinemotion/debate_frames').put_object(Key='test.jpg', Body=data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
