wrap up of debate 1
1. video processing is finalise except for S3 connection
2. debate1-emotions is finalise and is running to

--- a/debate_in_emotion_draft.ipynb
+++ b/debate_in_emotion_draft.ipynb
@@ -22,9 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -51,62 +52,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 207 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#setting up the file\n",
-    "videoFile = 'sample.mp4'\n",
-    "imagesFolder = \"/debate_frames\"\n",
+    "# setting up the file\n",
+    "videoFile = 'debate_sample.mp4'\n",
     "vidcap = cv2.VideoCapture(videoFile)\n",
-    "success,image = vidcap.read()"
+    "success,image = vidcap.read()\n",
+    "\n",
+    "# setting up parameters\n",
+    "seconds = 5\n",
+    "fps = int(round(vidcap.get(cv2.CAP_PROP_FPS))) # Gets the frames per second\n",
+    "multiplier = fps * seconds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#setting up parameters \n",
-    "seconds = 5\n",
-    "fps = vidcap.get(cv2.CAP_PROP_FPS) # Gets the frames per second\n",
-    "multiplier = fps * seconds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 12.6 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "#extarcting every frame\n",
+    "# extarcting every frame\n",
     "count = 0;\n",
     "while success:\n",
     "  success,image = vidcap.read()\n",
-    "  cv2.imwrite(\"debate_frames/frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
+    "  if count % multiplier == 0:\n",
+    "      cv2.imwrite(\"debate_frames/frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
+    "  \n",
     "  if cv2.waitKey(10) == 27:                     # exit if Escape is hit\n",
     "      break\n",
     "  count += 1"
@@ -116,45 +93,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#every Nth second\n",
-    "while success:\n",
-    "    frameId = int(round(vidcap.get(1)))\n",
-    "    success, image = vidcap.read()\n",
-    "\n",
-    "    if frameId % multiplier == 0:\n",
-    "        cv2.imwrite(\"debate_frames/frame%d.jpg\" % frameId, image)\n",
-    "        \n",
-    "    if cv2.waitKey(10) == 27:  # exit if Escape is hit\n",
-    "        break\n",
-    "\n",
-    "vidcap.release()\n",
-    "print(\"Complete\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "frameRate = vidcap.get(5) #frame rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# saving on S3 maybe?\n",
+    "# saving on S3 maybe? https://aws.amazon.com/articles/3998\n",
     "\n",
     "#### https://github.com/Microsoft/Cognitive-Face-Python/blob/master/cognitive_face/face.py ####"
    ]
@@ -186,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "CF.Key.set('2ed7c5847ac640f6b0a404c72d0b96f2') #set the key"
+    "CF.Key.set('d78211e12bba41a991382ade5d68745b') #set the key"
    ]
   },
   {
@@ -212,14 +155,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "image = '/Users/Amiros/GitHub/debate/images/frame10.jpg' #puting the image location"
+    "import glob\n",
+    "from numpy import array\n",
+    "\n",
+    "# selecting the filder for images\n",
+    "image_list = array(glob.glob(\"sampledebate_frames/*.jpg\"))"
    ]
   },
   {
@@ -230,7 +182,11 @@
    },
    "outputs": [],
    "source": [
-    "detect(image)"
+    "#initiating face detection\n",
+    "all_images = []\n",
+    "\n",
+    "for i,image in np.ndenumerate(image_list):\n",
+    "#    all_images.append(detect(image))"
    ]
   },
   {
@@ -241,8 +197,46 @@
    },
    "outputs": [],
    "source": [
-    "image2 = '/Users/Amiros/GitHub/debate/images/frame11.jpg' #puting the image location\n",
-    "detect(image2)"
+    "images_dict =[]\n",
+    "for i, instance in np.ndenumerate(all_images):\n",
+    "    for j, attr in np.ndenumerate(instance):\n",
+    "        images_dict.append(attr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def flattenjson( b, delim ):\n",
+    "    val = {}\n",
+    "    for i in b.keys():\n",
+    "        if isinstance( b[i], dict ):\n",
+    "            get = flattenjson( b[i], delim )\n",
+    "            for j in get.keys():\n",
+    "                val[ i + delim + j ] = get[j]\n",
+    "        else:\n",
+    "            val[i] = b[i]\n",
+    "\n",
+    "    return val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from operator import itemgetter\n",
+    "\n",
+    "for key, group in itertools.groupby(a, key=lambda x:x['faceAttributes']):\n",
+    "   print(key,)"
    ]
   },
   {
@@ -334,35 +328,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.31 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "group1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import urllib, base64, http.client\n",
+    "import http.client, urllib, base64\n",
     "\n",
-    "body = '/Users/Amiros/GitHub/debate/images/frame11.jpg'"
+    "#body = '/Users/Amiros/GitHub/debate/images/frame11.jpg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.28 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# Variables\n",
     "\n",
@@ -373,11 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 539 ms\n"
+     ]
+    }
+   ],
    "source": [
     "import time \n",
     "import requests\n",
@@ -394,11 +401,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 28.2 ms\n"
+     ]
+    }
+   ],
    "source": [
     "def processRequest( json, data, headers, params ):\n",
     "\n",
@@ -459,11 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1.47 s\n"
+     ]
+    }
+   ],
    "source": [
     "urlImage2 = 'https://raw.githubusercontent.com/Microsoft/ProjectOxford-ClientSDK/master/Face/Windows/Data/detection3.jpg'\n",
     "urlImage = 'https://s3-us-west-2.amazonaws.com/debateinemotion/T/t1.png'\n",
@@ -474,7 +497,7 @@
     "headers['Ocp-Apim-Subscription-Key'] = _key\n",
     "headers['Content-Type'] = 'application/json' \n",
     "\n",
-    "json = { 'url': urlImage } \n",
+    "json = { 'url': urlImage2 } \n",
     "data = None\n",
     "params = None\n",
     "\n",
@@ -483,11 +506,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'faceRectangle': {'height': 140, 'left': 216, 'top': 143, 'width': 140},\n",
+       "  'scores': {'anger': 4.857832e-09,\n",
+       "   'contempt': 3.60886387e-09,\n",
+       "   'disgust': 1.88275351e-09,\n",
+       "   'fear': 8.208998e-10,\n",
+       "   'happiness': 0.99999994,\n",
+       "   'neutral': 1.58002855e-08,\n",
+       "   'sadness': 2.58834572e-08,\n",
+       "   'surprise': 3.569176e-08}},\n",
+       " {'faceRectangle': {'height': 138, 'left': 378, 'top': 239, 'width': 138},\n",
+       "  'scores': {'anger': 4.67109421e-05,\n",
+       "   'contempt': 9.014235e-05,\n",
+       "   'disgust': 7.946587e-05,\n",
+       "   'fear': 0.0564681776,\n",
+       "   'happiness': 5.95064048e-05,\n",
+       "   'neutral': 0.5410432,\n",
+       "   'sadness': 0.299806863,\n",
+       "   'surprise': 0.102405921}}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 7.16 ms\n"
+     ]
+    }
+   ],
    "source": [
     "result"
    ]
@@ -503,7 +561,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
