--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -83,11 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1h 48min 47s\n"
+     ]
+    }
+   ],
    "source": [
     "#extracting every 'second' of the video\n",
     "for i in range(0, duration, seconds):\n",
@@ -138,20 +146,6 @@
    "source": [
     "import boto3 as boto\n",
     "s3 = boto.resource('s3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#setting parameters\n",
-    "AWS_BUCKET = 'debateinemotion/debate1'\n",
-    "\n",
-    "file = '/Users/Amiros/GitHub/debate/sampledebate_frames/frame150.jpg'"
    ]
   }
  ],
