final emotion list of dicts is corrected

--- a/debate1-emotions.ipynb
+++ b/debate1-emotions.ipynb
@@ -215,22 +215,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-76-b759efc48599>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0memotions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocessRequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 17 s\n"
+     ]
+    }
+   ],
    "source": [
     "# Face Detection & Emotioin Analysis \n",
-    "\n",
-    "face1 = []\n",
     "emotions = []\n",
+    "count = 0\n",
     "\n",
     "for single_image in url_list:\n",
     "    urlImage = single_image\n",
     "    json = { 'url': urlImage } \n",
-    "    face1.append(detect(single_image))\n",
-    "    face1.append(processRequest(json, data, headers, params))\n",
+    "    emotions.append(detect(single_image))\n",
+    "    emotions[count].append(processRequest(json, data, headers, params))\n",
+    "    count += 1\n",
     "    time.sleep(3.5)"
    ]
   },
@@ -242,23 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "####################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Adding gender to emotions\n",
-    "final_data = []\n",
-    "for i, value in enumerate(result):\n",
-    "    final_data.append(result[i])\n",
-    "    final_data[i].update(face[i])\n",
-    "final_data"
+    "#####################"
    ]
   },
   {
@@ -295,17 +299,6 @@
    "source": [
     "#select keys that are needed for analysis - it can be modified as needed\n",
     "wanted_keys = ['faceAttributes', 'faceId', 'scores']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "type(final_data)"
    ]
   },
   {
