--- a/debate1-emotions.ipynb
+++ b/debate1-emotions.ipynb
@@ -12,7 +12,7 @@
     "import cognitive_face as CF \n",
     "from cognitive_face import util\n",
     "import pandas as pd\n",
-    "import time\n"
+    "import time"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.52 ms\n"
+      "time: 2.83 ms\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -80,14 +80,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 4.1 ms\n"
+      "time: 3.4 ms\n"
      ]
     }
    ],
    "source": [
     "#Get all the frames from S3\n",
     "url_list = []\n",
-    "for i in range(355,5920,5):\n",
+    "for i in range(4920,5920,5):\n",
     "    url = \"https://s3-us-west-2.amazonaws.com/debateinemotion/debate1/frame%d.jpg\" % i\n",
     "    url_list.append(url)\n",
     "\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 38.4 ms\n"
+      "time: 42.7 ms\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 5.99 ms\n"
+      "time: 6.06 ms\n"
      ]
     }
    ],
@@ -193,62 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error code: 400\n",
-      "Message: Invalid image URL.\n",
-      "time: 1.25 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = processRequest( json, data, headers, params )\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-b759efc48599>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0memotions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocessRequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 17 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Face Detection & Emotioin Analysis \n",
-    "emotions = []\n",
+    "#emotions = []\n",
     "count = 0\n",
     "\n",
     "for single_image in url_list:\n",
     "    urlImage = single_image\n",
     "    json = { 'url': urlImage } \n",
     "    emotions.append(detect(single_image))\n",
+    "    emotions.append(int(count))\n",
     "    emotions[count].append(processRequest(json, data, headers, params))\n",
     "    count += 1\n",
     "    time.sleep(3.5)"
@@ -256,13 +216,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "913"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 3.7 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "#####################"
+    "len(emotions)"
    ]
   },
   {
