debate 1- data structure fixed
now data is indexed

--- a/debate1-emotions.ipynb
+++ b/debate1-emotions.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -80,14 +80,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.4 ms\n"
+      "time: 4 ms\n"
      ]
     }
    ],
    "source": [
     "#Get all the frames from S3\n",
     "url_list = []\n",
-    "for i in range(4920,5920,5):\n",
+    "for i in range(355,5920,5):\n",
     "    url = \"https://s3-us-west-2.amazonaws.com/debateinemotion/debate1/frame%d.jpg\" % i\n",
     "    url_list.append(url)\n",
     "\n",
@@ -193,30 +193,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-9a3a9d2ce1bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 5.09 s\n"
+     ]
+    }
+   ],
    "source": [
     "# Face Detection & Emotioin Analysis \n",
-    "#emotions = []\n",
+    "emotions1 = {}\n",
+    "frame_index = {}\n",
     "count = 0\n",
+    "\n",
     "\n",
     "for single_image in url_list:\n",
     "    urlImage = single_image\n",
     "    json = { 'url': urlImage } \n",
-    "    emotions.append(detect(single_image))\n",
-    "    emotions.append(int(count))\n",
-    "    emotions[count].append(processRequest(json, data, headers, params))\n",
+    "    emotions1[count] = detect(single_image)\n",
+    "    processed = processRequest(json, data, headers, params)\n",
+    "    emotions1[count].append(processed[0])\n",
+    "    \n",
     "    count += 1\n",
     "    time.sleep(3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -224,10 +246,18 @@
     {
      "data": {
       "text/plain": [
-       "913"
+       "[{'faceRectangle': {'height': 171, 'left': 536, 'top': 156, 'width': 171},\n",
+       "  'scores': {'anger': 0.000222364251,\n",
+       "   'contempt': 0.0308945477,\n",
+       "   'disgust': 0.0005188993,\n",
+       "   'fear': 3.26102668e-06,\n",
+       "   'happiness': 0.653031349,\n",
+       "   'neutral': 0.313853323,\n",
+       "   'sadness': 0.0004347275,\n",
+       "   'surprise': 0.001041556}}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -235,12 +265,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.7 ms\n"
+      "time: 1.61 s\n"
      ]
     }
    ],
    "source": [
-    "len(emotions)"
+    "json = { 'url': url_list[1] }\n",
+    "processRequest(json, data, headers, params)"
    ]
   },
   {
