second debate trained

--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -133,7 +133,8 @@
    },
    "outputs": [],
    "source": [
-    "#loading files to S3"
+    "#loading files to S3\n",
+    "# to do: directly uplaod images to S3"
    ]
   },
   {
