added try catch block

--- a/debate1-emotions.ipynb
+++ b/debate1-emotions.ipynb
@@ -241,8 +241,12 @@
     "\n",
     "    json = { 'url': single_image } \n",
     "    emotions[count] = detect(single_image)\n",
-    "    #processed = processRequest(json, data, headers, params)\n",
-    "    #emotions[count].append(processed[0])    \n",
+    "    processed = processRequest(json, data, headers, params)\n",
+    "    \n",
+    "    try:\n",
+    "        emotions[count].append(processed[0])  \n",
+    "    except ValueError:\n",
+    "        emotions[count].append(None) \n",
     "\n",
     "    if count < 5350:\n",
     "        count += 5\n",
