--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -53,21 +53,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 168 ms\n"
+      "time: 260 ms\n"
      ]
     }
    ],
    "source": [
     "# setting up the file\n",
-    "videoFile = 'debate.mp4'\n",
+    "videoFile = 'obama.mp4'\n",
     "vidcap = cv2.VideoCapture(videoFile)\n",
     "success,image = vidcap.read()\n",
     "\n",
     "# setting up parameters\n",
-    "seconds = 5000\n",
+    "seconds = 2000\n",
     "fps = int(round(vidcap.get(cv2.CAP_PROP_FPS))) # Gets the frames per second\n",
     "total_frames = int(vidcap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "duration = (round(total_frames/fps) -1)*1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1453000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.93 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "duration"
    ]
   },
   {
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1h 48min 47s\n"
+      "time: 274 ms\n"
      ]
     }
    ],
@@ -102,16 +131,24 @@
     "    vidcap.set(cv2.CAP_PROP_POS_MSEC,i)\n",
     "    success,image = vidcap.read()\n",
     "    j = i/1000\n",
-    "    cv2.imwrite(\"debate_frames/frame%d.jpg\" % j, image)     # save frame as JPEG file"
+    "    cv2.imwrite(\"obama/obama%d.jpg\" % j, image)     # save frame as JPEG file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 8.91 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# extarcting every frame\n",
     "count = 0;\n",
